--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.7.0",
+    "firebase": "^10.0.0",
     "gh-pages": "^5.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
