--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
   "devDependencies": {
     "tailwindcss": "^3.3.3"
   },
-  "homepage": "https://github.com/fakhrirafiki/label-tamu-undangan"
+  "homepage": ""
 }
